<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".VerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/viewNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_nombre"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:labelFor="@+id/viewNombre"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtSexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_sexo"
            android:textSize="14sp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbFemenino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Femenino"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rbMasculino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Masculino"
                android:textSize="16sp" />
        </RadioGroup>

        <TextView
            android:id="@+id/viewTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_telefono"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/txtTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:labelFor="@+id/viewTelefono"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/viewDireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_direccion"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/txtDireccion"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:ems="10"
            android:inputType="text|textMultiLine"
            android:lines="2"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/viewFechaNac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_fecha_nacimiento"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnCalendario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_my_calendar" />

            <EditText
                android:id="@+id/txtFechaNacimiento"
                android:layout_width="185dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:ems="10"
                android:inputType="date" />

            <TextView
                android:id="@+id/viewEdad"
                android:layout_width="2dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hint_edad" />

            <TextView
                android:id="@+id/txtViewEdad"
                android:layout_width="91dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <TextView
            android:id="@+id/viewCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_correo_electronico"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/txtCorreoElectronico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:labelFor="@+id/viewCorreo"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtGrupo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_grupo"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/cbxGrupo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:entries="@array/strGrupos" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTipo"
                android:layout_width="187dp"
                android:layout_height="wrap_content"
                android:text="@string/hint_tipo"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/cbxTipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/strTipos" />
        </LinearLayout>

        <TextView
            android:id="@+id/viewNota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/hint_nota"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/txtNota"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:ems="10"
            android:inputType="text|textMultiLine"
            android:lines="4"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/viewRegistro"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/hint_fecha_registro" />

            <TextView
                android:id="@+id/txtFechaRegistro"
                android:layout_width="288dp"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:gravity="right"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnGuarda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/btn_guarda" />

            <LinearLayout
                android:layout_width="119dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabEditar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:clickable="true"
                    android:src="@drawable/ic_edit" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabEliminar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:clickable="true"
                    android:src="@drawable/ic_delete" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
<!--
    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        tools:ignore="BottomAppBar">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_edit" />

    </com.google.android.material.bottomappbar.BottomAppBar>-->
</LinearLayout>